--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@ author: Taewoon Kim
 
 navbar-links:
   # About Me: "aboutme"
+  # Blog: blog
   Projects:
-    - Large Langauge Models: "/projects/llm"
-    - Computer Vision: 
-    - A Machine With Human-Like Memory Systems:
-    - Tracking Glass Bottles With Letter in the Sea: 
-  Posts: "posts"
-  CV: "/taewoon-kim-cv.pdf"
+    - Large Langauge Models: /projects/llm
+    - Computer Vision: /projects/computer-vision
+    - A Machine With Human-Like Memory Systems: /projects/human-memory
+    - Tracking Glass Bottles With Letter in the Sea: /projects/glass-track
+  CV: /taewoon-kim-cv.pdf
   # Resources:
   #   - Beautiful Jekyll: "https://beautifuljekyll.com"
   #   - Learn markdown: "https://www.markdowntutorial.com/"
@@ -65,7 +65,7 @@ social-network-links:
   twitter: tae898
   # patreon: tae898
   youtube: "@tae898"
-  google-scholar: https://scholar.google.com/citations?user=dJ4ksGoAAAAJ&hl=en
+  google-scholar: dJ4ksGoAAAAJ&hl=en
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
@@ -101,7 +101,7 @@ social-network-links:
 share-links-active:
   twitter: true
   # facebook: true
-  linkedin: true
+  # linkedin: true
   # vk: false
 
 # How to display the link to your website in the footer
