--- a/_config.yml
+++ b/_config.yml
@@ -267,7 +267,8 @@ timezone: "Europe/Amsterdam"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
-paginate: 5
+paginate: 10
+paginate_path: /blog/page:num/
 
 kramdown:
   input: GFM
