--- a/_config.yml
+++ b/_config.yml
@@ -198,7 +198,7 @@ footer-hover-col: "#0085A1"
 ####################
 
 # To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-#disqus: ""
+disqus: "taewoonkim"
 
 # To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
 #fb_comment_id: ""
@@ -268,7 +268,7 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 10
-paginate_path: /blog/page:num/
+paginate_path: /blog/page:num/ # only apply to blog
 
 kramdown:
   input: GFM
