--- a/_config.yml
+++ b/_config.yml
@@ -172,7 +172,7 @@ footer-hover-col: "#0085A1"
 #################################
 
 # Fill in your Google Analytics tag ID (or "Measurement ID") to track your website usage
-#gtag: "G-8E02EYZXEW"
+gtag: "G-8E02EYZXEW"
 
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
