--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ navbar-links:
   Projects:
     - Large Langauge Models: /projects/llm
     - Computer Vision: /projects/computer-vision
-    - A Machine With Human-Like Memory Systems: /projects/human-memory
+    - A Machine With Human-Like Memory Systems (Humemai): /projects/human-memory
     - Tracking Glass Bottles With Letter in the Sea: /projects/glass-track
   CV: /taewoon-kim-cv.pdf
   # Resources:
