--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ navbar-links:
   Projects:
     - Large Langauge Models: /projects/llm
     - Computer Vision: /projects/computer-vision
-    - A Machine With Human-Like Memory Systems (Humemai): /projects/human-memory
-    - Tracking Glass Bottles With Letter in the Sea: /projects/glass-track
+    - "HumemAI: A Machine With Human-Like Memory Systems": /projects/human-memory
+    # - Tracking Glass Bottles With Letter in the Sea: /projects/glass-track
   CV: /taewoon-kim-cv.pdf
   # Resources:
   #   - Beautiful Jekyll: "https://beautifuljekyll.com"
@@ -57,7 +57,7 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "info@taewoon.kim"
+  email: "taewoon@humem.ai"
   # rss: true  # remove this line if you don't want to show an RSS link at the bottom
   # facebook: deanattali
   linkedin: tae898
