--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ author: Taewoon Kim
 navbar-links:
   # About: about
   Blog: blog
-  Projects:
-    - Large Langauge Models: /projects/llm
-    - Computer Vision: /projects/computer-vision
-    - "HumemAI: A Machine With Human-Like Memory Systems": /projects/human-memory
-    # - Tracking Glass Bottles With Letter in the Sea: /projects/glass-track
+  # Projects:
+  #   - Large Langauge Models: /projects/llm
+  #   - Computer Vision: /projects/computer-vision
+  #   - "HumemAI: A Machine With Human-Like Memory Systems": /projects/human-memory
+  #   # - Tracking Glass Bottles With Letter in the Sea: /projects/glass-track
   CV: /taewoon-kim-cv.pdf
   # Resources:
   #   - Beautiful Jekyll: "https://beautifuljekyll.com"
@@ -272,7 +272,7 @@ timezone: "Europe/Amsterdam"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
-paginate: 10
+paginate: 5
 paginate_path: /blog/page:num/ # only apply to blog
 
 kramdown:
