--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "taewoon@taewoon.kim"
+  email: "taewoon@humem.ai"
   # rss: true  # remove this line if you don't want to show an RSS link at the bottom
   # facebook: deanattali
   linkedin: tae898
